--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <title>Methode Lafay</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
   <meta name="theme-color" content="#1976d2">
   <link rel="manifest" href="manifest.webmanifest">
 
